# RSCAN

.github/workflows/: ci.yml
docs/: 01_IOS_SCANNING_LAYER.md  02_POINT_CLOUD_PROCESSING.md  03_ROOF_RECONSTRUCTION.md  04_ROOM_SEGMENTATION.md  RSCAN_ARCHITECTURE.md
rscan-desktop/: index.html  package.json
rscan-desktop/src/: App.vue
rscan-desktop/src-tauri/: Cargo.toml  tauri.conf.json
rscan-desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  point_cloud.rs
rscan-desktop/src/components/: PointCloudViewer.vue  Sidebar.vue
rscan-desktop/src/stores/: pointCloud.ts
rscan-ios/RSCAN/: Info.plist  RSCANApp.swift
rscan-ios/RSCAN/Extensions/: ARKit+Extensions.swift
rscan-ios/RSCAN/Models/: Models.swift
rscan-ios/RSCAN/Services/: DeviceCapabilityService.swift  ExportService.swift  PhotogrammetryCaptureService.swift  ReconstructionModules.swift  ReconstructionPipeline.swift
rscan-ios/RSCAN/ViewModels/: ScanViewModel.swift
rscan-ios/RSCAN/Views/: ContentView.swift  LiDARScanView.swift  RoomScanView.swift  TripleView.swift  UnifiedScanView.swift
