[package]
name = "rscan-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "rscan_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.32"
rayon = "1.8"
thiserror = "1"
